fix(landing): content not centered anymore

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -65,7 +65,7 @@ a.more-info:visited {
 }
 
 .home-container-inner {
-  // text-align: center;
+  text-align: center;
   position: relative;
 }
 
@@ -283,6 +283,8 @@ a.more-info:visited {
   align-items: flex-start;
   justify-content: center;
   text-align: left;
+  width: 100%;
+  max-width: 600px;
 
   @media (max-width: 700px) {
     max-width: 400px;
@@ -291,8 +293,6 @@ a.more-info:visited {
 }
 
 .text-box-centered {
-  width: 100%;
-  max-width: 600px;
   text-align: center;
   margin: 0 auto;
 
